# MultigridSolver

./: .clang-format  CMakeLists.txt  Notes.md  README.md  comments.txt
src/: CMakeLists.txt  Poisson2D.cpp  Poisson2D.hpp  algebraic_multigrid.hpp  domain.hpp  hh.hpp  hl.cpp  jacobi.hpp  jacobi_demo.cpp  jacobi_r.hpp  main.cpp  main_za.cpp  matrix.hpp  matrix_r.hpp  matrixz.hpp  mg_demo.cpp  multilevel_mg_demo.cpp  prova.cpp  test.cpp
src/GeometricMultigridReference/: GMG.py  test.py
src/LinearAlgebra/: sparse_matrix.hpp  vector.hpp
src/LinearAlgebra/IterativeSolvers/: algebraic_multigrid.hpp  geometric_multigrid.hpp  iterative_solver.hpp  jacobi_r.hpp  multigrid_solver.hpp  multilevel_geometric_multigrid.hpp  multilevel_multigrid_solver.hpp
src/Matrix/: dense_matrix.hpp  dynamic_dense_matrix.hpp  matrix_r.hpp  sparse_matrix_r.hpp
src/not_used/: matrixz.hpp  test.cpp
src/other/: jacobi.hpp  matrix.hpp
